--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,10 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd client    
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: cd client && npm ci
+    - run: cd client && npm run build --if-present
+    - run: cd client && npm test
 
   build-server:
 
@@ -47,7 +46,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd server    
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: cd server && npm ci
+    - run: cd server && npm run build --if-present
+    - run: cd server && npm test
