--- a/client/public/env/env.local.properties
+++ b/client/public/env/env.local.properties
@@ -6,5 +6,6 @@ AUTH0_DEFAULT_SCOPE=read:users read:roles
 AUTH0_CLIENT_ID=
 
 BACKEND_URL=http://localhost:4000
+BACKEND_API_VERSION=api/v1
 BACKEND_AUDIENCE=https://testapi.psz.com/
 BACKEND_SCOPE=read:all write:all
