--- a/client/public/env/env.preprod.properties
+++ b/client/public/env/env.preprod.properties
@@ -5,5 +5,8 @@ AUTH0_DOMAIN=dev-fvtls877.us.auth0.com
 AUTH0_CLIENT_ID=
 
 BACKEND_URL=http://localhost:4000/
+BACKEND_API_VERSION=api/v1
+BACKEND_AUDIENCE=https://testapi.psz.com/
+BACKEND_SCOPE=read:all write:all
 
 
