--- a/server/package.json
+++ b/server/package.json
@@ -3,18 +3,36 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "react-scripts test",
+    "start": "node src/server.js"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app/jest"
+    ]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
     "express-jwt-authz": "^2.4.1",
-    "jwks-rsa": "^3.0.0"
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
+    "jwks-rsa": "^3.0.0",
+    "react-scripts": "^5.0.1",
+    "xss": "^1.0.14",
+    "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.3.1",
+    "jest": "^27.5.1"
   }
 }
